feat: create new phone endpoint
