# controllers/phone_controller.go
@@ -2,8 +2,8 @@ package controllers
 
 import (
 	"net/http"
-	"time"
 	"strconv"
+	"time"
 
 	"golang-phone-review-api/models"
 
@@ -25,7 +25,7 @@ type (
 		PhoneID     int       `json:"phone_id" example:"1" extensions:"x-order=0"`
 		Brand       string    `json:"brand" example:"Samsung" extensions:"x-order=1"`
 		Model       string    `json:"model" example:"Galaxy" extensions:"x-order=2"`
-		ReleaseDate time.Time `json:"release_date" example:"2023-11-11T00:00:00+07:00" extensions:"x-order=3"`
+		ReleaseDate time.Time `json:"release_date" example:"2023-11-11" extensions:"x-order=3"`
 		Price       int       `json:"price" example:"10000" extensions:"x-order=4"`
 		ImageURL    string    `json:"image_url" example:"" extensions:"x-order=5"`
 		Reviews 		[]ReviewResponse	`json:"reviews" extensions:"x-order=6"`
@@ -50,6 +50,25 @@ type (
 		Reviews []models.Review `json:"reviews" extensions:"x-order=1"`
 	}
 	
+	CreatePhoneInput struct {
+		Brand       string    `json:"brand" example:"Samsung" extensions:"x-order=1"`
+		Model       string    `json:"model" example:"Galaxy" extensions:"x-order=2"`
+		ReleaseDate time.Time 		`json:"release_date" example:"2023-01-01T00:00:00Z" extensions:"x-order=3"`
+		Price       int      	`json:"price" example:"10000" extensions:"x-order=4"`
+		ImageURL    string    `json:"image_url" example:"" extensions:"x-order=5"`
+	}
+
+	CreatedPhoneResponse struct {
+		Message 	string 	`json:"message" example:"phone created successfully" extensions:"x-order=0"`
+		Phone 		struct {
+			PhoneID 		int      	`json:"phone_id" example:"1" extensions:"x-order=0"`
+			Brand       string    `json:"brand" example:"Samsung" extensions:"x-order=1"`
+			Model       string    `json:"model" example:"Galaxy" extensions:"x-order=2"`
+			ReleaseDate time.Time `json:"release_date" example:"2023-01-01T00:00:00Z" extensions:"x-order=3"`
+			Price       int      	`json:"price" example:"10000" extensions:"x-order=4"`
+			ImageURL    string    `json:"image_url" example:"" extensions:"x-order=5"`
+		} `json:"phone" extensions:"x-order=1"`
+	}
 )
 
 // @Summary List all phones
@@ -129,29 +148,35 @@ func GetPhoneByID(c *gin.Context) {
 // @Tags Phones
 // @Produce json
 // @Param phone_id path string true "PhoneID"
-// @Success 200 {object} models.Review
+// @Success 200 {object} []models.Review
 // @Router /phones/{phone_id}/reviews [get]
 func GetReviewsForPhoneID(c *gin.Context) {
-	var review models.Review
+	var reviews []models.Review
 	db := c.MustGet("db").(*gorm.DB)
 	phoneID := c.Param("phone_id")
 
-	if err := db.Preload("Comments").Preload("Likes").Where("phone_id= ?", phoneID).Find(&review).Error; err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to fetch reviews"})
+	var existingPhone models.Phone
+	if err := db.First(&existingPhone, phoneID).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Phone not found"})
 		return
 	}
 
-	c.JSON(http.StatusOK, review)
+	if err := db.Preload("Comments").Preload("Likes").Where("phone_id= ?", phoneID).Find(&reviews).Error; err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to fetch phone reviews"})
+		return
+	}
+
+	c.JSON(http.StatusOK, reviews)
 }
 
-// @Summary Create a phone review by its ID
-// @Description Create phone review by ID
+// @Summary Create a phone review by phone ID
+// @Description Create phone review by phone ID
 // @Tags Phones
 // @Produce json
 // @Param phone_id path string true "PhoneID"
 // @Param Body body CreateReviewInput true "the body to create phone review"
 // @Security Bearer
-// @Success 200 {object} models.Review
+// @Success 201 {object} models.Review
 // @Router /phones/{phone_id}/reviews [post]
 func CreateReviewForPhone(c *gin.Context) {
 	var input CreateReviewInput
@@ -160,6 +185,12 @@ func CreateReviewForPhone(c *gin.Context) {
 
 	if err := c.ShouldBindJSON(&input); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	var existingPhone models.Phone
+	if err := db.First(&existingPhone, phoneID).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Phone not found"})
 		return
 	}
 
@@ -184,4 +215,43 @@ func CreateReviewForPhone(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusCreated, gin.H{"message": "review created successfully", "review": review})
+}
+
+// @Summary Create a phone 
+// @Description Create a phone
+// @Tags Phones
+// @Produce json
+// @Param Body body CreatePhoneInput true "the body to create a phone"
+// @Security Bearer
+// @Success 201 {object} CreatedPhoneResponse
+// @Router /phones [post]
+func CreatePhone(c *gin.Context) {
+	var input CreatePhoneInput
+	db := c.MustGet("db").(*gorm.DB)
+
+	if err := c.ShouldBindJSON(&input); err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+	}
+
+	userRole, _ := c.Get("user_role")
+	if userRole != "Admin" {
+			c.JSON(http.StatusForbidden, gin.H{"forbidden": `User does not have "Admin" role`})
+			return
+	}
+
+	phone := models.Phone{
+			Brand:       input.Brand,
+			Model:       input.Model,
+			ReleaseDate: input.ReleaseDate,
+			Price:       input.Price,
+			ImageURL:    input.ImageURL,
+	}
+
+	if err := db.Create(&phone).Error; err != nil {
+			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create phone"})
+			return
+	}
+
+	c.JSON(http.StatusCreated, gin.H{"message": "phone created successfully", "phone": phone})
 }
